--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "moment-timezone": "^0.5.45",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.4",
-    "proper-lockfile": "^4.1.2"
+    "proper-lockfile": "^4.1.2",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.26.0"
   },
   "_moduleAliases": {
     "listeners": "./listeners",
