--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "restart": "nodemon index.js"
   },
   "dependencies": {
+    "circular-json": "^0.5.9",
     "mineflayer": "^4.20.1",
     "mineflayer-item-map-downloader": "^1.3.0",
     "module-alias": "^2.2.3",
