--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,11 @@
 {
-  "GLOBAL_CHAT_RENEGADE": "you are helfull assistant",
-  "EDEN_APIKEY": [
-    "list apikey"
-  ]
+  "GLOBAL_CHAT_TRAINING": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_BTTH": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_JD": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_SL": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_EC": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_RI": "GLOBAL_SISTEM_CHAT",
+  "DEEPSEEK_APIKEY": "DEEPSEEK_APIKEY",
+  "GLOBAL_CHAT_SS": "GLOBAL_SISTEM_CHAT",
+  "GLOBAL_CHAT_PW": "GLOBAL_SISTEM_CHAT",
 }
